welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: '(' expected but identifier found.
for compteur<-1 to 4{
    ^Runner:11: error: illegal start of simple expression
	}
        ^